--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 8888 --config webpack.config.js",
+    "dev": "webpack-dev-server --open --port 8888 --config webpack.config.js --hot",
     "build": "webpack --progress --hide-modules --config webpack.prod.config.js"
   },
   "keywords": [],
@@ -15,12 +15,14 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "cors": "^2.8.5",
     "css-loader": "^3.2.0",
     "element-ui": "^2.12.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -34,6 +36,7 @@
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
